--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,30 @@ services:
     depends_on:
       - db
 
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    container_name: ballrae-zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ALLOW_ANONYMOUS_LOGIN: "yes"
+
+  kafka:
+    image: bitnami/kafka:3.7.0
+    container_name: ballrae-kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_CFG_ZOOKEEPER_CONNECT: ballrae-zookeeper:2181
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      ALLOW_PLAINTEXT_LISTENER: "yes"
+    depends_on:
+      - zookeeper
+    volumes:
+      - kafka_data:/bitnami/kafka
+
 volumes:
   postgres_data:
+  kafka_data:
+  zookeeper_data:
