--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,34 @@ services:
     environment:
       KAFKA_CFG_ZOOKEEPER_CONNECT: ballrae-zookeeper:2181
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       ALLOW_PLAINTEXT_LISTENER: "yes"
     depends_on:
       - zookeeper
     volumes:
       - kafka_data:/bitnami/kafka
+
+  kafka-consumer:
+    container_name: ballrae-kafka-consumer
+    build: .
+    volumes:
+      - .:/app
+    command: python consumer.py
+    depends_on:
+      - db
+      - kafka
+    environment:
+      - POSTGRES_DB=...
+      - POSTGRES_HOST=db
+  
+  kafka-producer:
+    container_name: ballrae-kafka-producer
+    build: .
+    volumes:
+      - .:/app
+    command: python producer.py
+    depends_on:
+      - kafka
 
 volumes:
   postgres_data:
