Feat: producer 5개 실시간

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ DB_PORT=5432
 DJANGO_SETTINGS_MODULE=ballrae_backend.settings
 
 AIRFLOW_UID=50000
+
+PYTHONPATH=/app
+DJANGO_SETTINGS_MODULE=ballrae_backend.settings
