--- a/hate-filter-api/Dockerfile
+++ b/hate-filter-api/Dockerfile
@@ -1,15 +1,14 @@
 FROM python:3.10-slim
 
 WORKDIR /app
+ENV PYTHONPATH=/app
 
-# 시스템 패키지 설치
 RUN apt-get update && apt-get install -y build-essential && rm -rf /var/lib/apt/lists/*
 
-# 의존성 설치
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# 앱 코드 복사
-COPY app ./app
+# 핵심: app 폴더를 /app/app 이 아니라 그냥 /app에 복사
+COPY app/ . 
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001", "--workers", "2"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001", "--workers", "1"]
