--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,8 +94,8 @@ services:
       - .env
     volumes:
       - .:/app
-    # kafka가 실행안되면 broker unavailable뜨니까~
-    restart: on-failure
+    # # kafka가 실행안되면 broker unavailable뜨니까~
+    # restart: on-failure
     working_dir: /app
   
   kafka-producer:
@@ -109,7 +109,7 @@ services:
       - .env
     volumes:
       - .:/app
-    restart: on-failure
+    # restart: on-failure
     working_dir: /app
   
   airflow-webserver:
