fix: cicd 컨테이너명 이슈

--- a/.github/workflows/cicd_demo.yaml
+++ b/.github/workflows/cicd_demo.yaml
@@ -5,7 +5,8 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2
-  ECR_BACKEND: ballrae-backend         # ECR 리포지토리명
+  ECR_BACKEND: web         # ECR 리포지토리명
+  ECR_DATABASE: db         # ECR 리포지토리명
   ECR_HATE: hate-filter-api            # (있으면) ECR 리포지토리명
 
 jobs:
@@ -68,6 +69,11 @@ jobs:
             set -e
             cd ~/Back   # compose 있는 디렉토리로 이동 (환경에 맞게 바꿔주세요)
 
+            # 워크플로 env를 원격 셸 변수로 노출
+            export ECR_BACKEND="${{ env.ECR_BACKEND }}"
+            export ECR_DATABASE="${{ env.ECR_DATABASE }}"
+            export ECR_HATE="${{ env.ECR_HATE }}"
+
             # --- AWS CLI 없으면 설치 (1회만) ---
             if ! command -v aws >/dev/null 2>&1; then
               curl -fsSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -82,16 +88,19 @@ jobs:
             aws ecr get-login-password --region ${{ env.AWS_REGION }} \
               | sudo docker login --username AWS --password-stdin "$REGISTRY"
 
-            # --- 필요한 서비스만 갱신 (예: web, db, hate) ---
-            sudo docker compose pull web hate || true
+            # --- 필요한 서비스만 갱신 (예: backend, db, api) ---
+            sudo docker compose pull "$ECR_BACKEND" "$ECR_HATE" || true
             # db 이미지는 퍼블릭이면 pull 생략해도 됨
 
-            # 변한 컨테이너만 재생성 (전부가 아니라 필요한 것만!)
-            sudo docker compose up -d --force-recreate --no-deps web hate
+            # db는 먼저 보장해서 올리고
+            sudo docker compose up -d "$ECR_DATABASE"
+
+            # 앱 컨테이너들만 재생성 (전부가 아니라 필요한 것만)
+            sudo docker compose up -d --force-recreate --no-deps "$ECR_BACKEND" "$ECR_HATE"
 
             # 마이그레이션 & 정적파일
-            sudo docker compose exec -T web python manage.py migrate --noinput
-            sudo docker compose exec -T web python manage.py collectstatic --noinput
+            sudo docker compose exec -T "$ECR_BACKEND" python manage.py migrate --noinput
+            sudo docker compose exec -T "$ECR_BACKEND" python manage.py collectstatic --noinput
 
             # 청소
             sudo docker image prune -f
