--- a/.github/workflows/cicd_demo.yaml
+++ b/.github/workflows/cicd_demo.yaml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
 
 env:
-  AWS_REGION: ap-northeast-2
+  AWS_REGION: us-east-2
   ECR_BACKEND: web         # ECR 리포지토리명
   ECR_DATABASE: db         # ECR 리포지토리명
   ECR_HATE: hate-filter-api            # (있으면) ECR 리포지토리명
