fix: cicd 컨테이너명 이슈

--- a/.github/workflows/cicd_demo.yaml
+++ b/.github/workflows/cicd_demo.yaml
@@ -5,8 +5,8 @@ on:
 
 env:
   AWS_REGION: us-east-2
-  ECR_BACKEND: web         # ECR 리포지토리명
-  ECR_DATABASE: db         # ECR 리포지토리명
+  ECR_BACKEND: ballrae-backend         # ECR 리포지토리명
+  ECR_DATABASE: ballrae-postgres         # ECR 리포지토리명
   ECR_HATE: hate-filter-api            # (있으면) ECR 리포지토리명
 
 jobs:
