fix: cicd 명령어 이슈

--- a/.github/workflows/cicd_demo.yaml
+++ b/.github/workflows/cicd_demo.yaml
@@ -94,7 +94,7 @@ jobs:
             sudo docker compose up -d db
 
             # 앱 컨테이너들만 재생성 (전부가 아니라 필요한 것만)
-            sudo docker compose up -d --force-recreate --no-dep web hate-filter-api
+            sudo docker compose up -d web hate-filter-api
 
             # 마이그레이션 & 정적파일
             sudo docker compose exec -T web python manage.py migrate --noinput
